# duq_ds330_npi_grants

./: README.md  pyproject.toml
duq_ds330_npi_grants/: create_training_data.py  model_features.py
duq_ds330_npi_grants/readers/: grants.py  npi.py
scripts/: add_data_to_db.py  train_xgb_model.py
