[tool.poetry]
name = "duq-ds330-npi-grants"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
sqlalchemy = "^2.0.29"
xgboost = "^2.0.3"
scikit-learn = "^1.4.1.post1"
jarowinkler = "^2.0.1"
sentence-transformers = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
